# rkmpp_enc

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  encode_config.yaml  mpi_enc_test.c  output.h264
src/: mpi_enc_utils.c
